# COUNTER

./: README.md  main.cpp
FaciesAI/: README.md  pyproject.toml
FaciesAI/cratonml_gui/: main.py  pyinstaller.py
FaciesAI/cratonml_gui/Themes/: DarkTheme.py  LightTheme.py
FaciesAI/cratonml_gui/UniversalControllers/: WorkerCalculate.py  WorkerClassification.py  WorkerClustreing.py  WorkerInfoReader.py  WorkerPostProcessing.py  WorkerPreparer.py  WorkerReader.py  WorkerRegression.py  WorkerSaver.py  WorkerStatistics.py
FaciesAI/cratonml_gui/UniversalProcessing/: Caching.py  ConfigParser.py  SettingsParser.py
FaciesAI/cratonml_gui/UniversalWidgets/DataSelectWidget/: DataSelectWidget.py  DataSelectWidget.ui  DataSelectWidget_ui.py
FaciesAI/cratonml_gui/UniversalWidgets/MainWidget/: Main.py  Main.ui  animated_toggle.py
FaciesAI/cratonml_gui/UniversalWidgets/MessageWidget/: MessageWidget.py  MessageWidget.ui  MessageWidget_ui.py
FaciesAI/cratonml_gui/UniversalWidgets/Settings/: Settings.py  SettingsWidget.py
FaciesAI/cratonml_gui/UniversalWidgets/TabMain/: TabMain.py  TabMain.ui  TabMain_ui.py
FaciesAI/cratonml_gui/UniversalWidgets/TabWithSave/: TabWithSave.py  TabWithSave.ui  TabWithSave_ui.py
FaciesAI/cratonml_gui/UniversalWidgets/View/: BoxPlotWindow.py  CrossPlotWindow.py  CurveClassesWindow.py  CurveWindow.py  GridDataWindow.py  HistogramWindow.py  LabelsStatisticWindow.py  MetricsWindow.py  PCAStatisticsWindow.py  PieChartWindow.py  StatisticWindow.py  TableWindow.py  View.py  WellWindow.py
FaciesAI/cratonml_gui/templates/WLI/: WLI_main.py
FaciesAI/cratonml_gui/templates/WLI/Widgets/Settings/: WLI_Settings.py
FaciesAI/cratonml_gui/templates/WLI/Widgets/Settings/Processing/: WLI_Caching.py  (+2 more)
FaciesAI/cratonml_gui/templates/WLI/Widgets/View/: WLI_View.py
FaciesAI/cratonml_gui/utilities/: Message.py  Signals.py  __init__.py  sorting.py  view_utilities.py
cpp/shooter_game2/: CMakeCache.txt  CMakeLists.txt
cpp/shooter_game2/include/: game_engine.h  objects.h
cpp/shooter_game2/src/: game_engine.cpp  start_game.cpp
lab2/: CMakeLists.txt  music.cpp
lab2/include/: converter.h  factory.h  format_factory.h  music.h
lab2/src/: converter.cpp  factory.cpp  main.cpp  music.cpp
(+273 files in other folders)
